Adjusting the style of the administration screen

--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ wrapper
     display: block;
 }
 
-.col2-item img {
+.col2-item-img {
     height: 500px;
 }
 
@@ -669,6 +669,11 @@ js
 .sp-show {
     display: none;
 }
+
+/*-------------------------------------------
+管理画面
+-------------------------------------------*/
+
 
 /*-------------------------------------------
 SP
